Bug 1586284 - Modify the flex layout to give urls more space on small screens. r=dao
Let the url wrap, when the screen size is smaller than a threshold.
Along with a new proposal by Verdi for the toolbar overflow behavior, this
allows the urlbar to stay usable in small windows.

Because the title in Quantum Bar should never be empty, a few rules can be
simplified, so they also apply to the url when it's not a sibling of the other
result parts.

Differential Revision: https://phabricator.services.mozilla.com/D53178

UltraBlame original commit: b70e9a9a448663b4f39abf0b222e99a6ba053bf4

--- a/browser/themes/shared/urlbar-autocomplete.inc.css
+++ b/browser/themes/shared/urlbar-autocomplete.inc.css
@@ -1124,6 +1124,12 @@ urlbarView
 row
 -
 inner
+.
+urlbarView
+-
+no
+-
+wrap
 {
 display
 :
@@ -1147,6 +1153,383 @@ content
 :
 start
 ;
+}
+.
+urlbarView
+[
+actionoverride
+]
+.
+urlbarView
+-
+row
+[
+has
+-
+url
+]
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+.
+urlbarView
+-
+row
+[
+has
+-
+url
+]
+:
+not
+(
+[
+type
+=
+tab
+]
+)
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+.
+urlbarView
+-
+row
+[
+has
+-
+url
+]
+[
+type
+=
+remotetab
+]
+[
+selected
+]
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+.
+urlbarView
+-
+row
+[
+has
+-
+url
+]
+[
+type
+=
+remotetab
+]
+:
+hover
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+{
+flex
+-
+shrink
+:
+0
+;
+max
+-
+width
+:
+calc
+(
+70
+%
+-
+2
+*
+(
+16px
++
+(
+6px
++
+2px
+)
+)
+)
+;
+}
+media
+screen
+and
+(
+max
+-
+width
+:
+800px
+)
+and
+(
+min
+-
+height
+:
+600px
+)
+{
+.
+urlbarView
+.
+megabar
+.
+urlbarView
+-
+row
+-
+inner
+{
+flex
+-
+wrap
+:
+wrap
+;
+}
+.
+urlbarView
+.
+megabar
+.
+urlbarView
+-
+no
+-
+wrap
+{
+max
+-
+width
+:
+100
+%
+!
+important
+;
+flex
+-
+basis
+:
+100
+%
+;
+}
+.
+urlbarView
+.
+megabar
+.
+urlbarView
+-
+row
+[
+has
+-
+url
+]
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+url
+{
+margin
+-
+top
+:
+2px
+;
+padding
+-
+inline
+-
+start
+:
+calc
+(
+urlbarViewItemInlinePadding
++
+identityBoxMarginInlineEnd
++
+16px
+)
+;
+}
+.
+urlbarView
+.
+megabar
+[
+actionoverride
+]
+.
+urlbarView
+-
+row
+[
+has
+-
+url
+]
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+>
+.
+urlbarView
+-
+title
+-
+separator
+.
+urlbarView
+.
+megabar
+.
+urlbarView
+-
+row
+[
+has
+-
+url
+]
+:
+not
+(
+[
+type
+=
+tab
+]
+)
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+>
+.
+urlbarView
+-
+title
+-
+separator
+.
+urlbarView
+.
+megabar
+.
+urlbarView
+-
+row
+[
+type
+=
+remotetab
+]
+:
+not
+(
+[
+selected
+]
+)
+:
+not
+(
+:
+hover
+)
+{
+display
+:
+none
+;
+}
 }
 .
 urlbarView
@@ -1935,6 +2318,13 @@ inner
 .
 urlbarView
 -
+no
+-
+wrap
+>
+.
+urlbarView
+-
 type
 -
 icon
@@ -1991,6 +2381,13 @@ urlbarView
 row
 -
 inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
 >
 .
 urlbarView
@@ -2100,6 +2497,13 @@ inner
 .
 urlbarView
 -
+no
+-
+wrap
+>
+.
+urlbarView
+-
 type
 -
 icon
@@ -2150,6 +2554,13 @@ inner
 .
 urlbarView
 -
+no
+-
+wrap
+>
+.
+urlbarView
+-
 type
 -
 icon
@@ -2195,6 +2606,13 @@ inner
 .
 urlbarView
 -
+no
+-
+wrap
+>
+.
+urlbarView
+-
 type
 -
 icon
@@ -2226,6 +2644,13 @@ urlbarView
 row
 -
 inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
 >
 .
 urlbarView
@@ -2274,6 +2699,13 @@ inner
 .
 urlbarView
 -
+no
+-
+wrap
+>
+.
+urlbarView
+-
 type
 -
 icon
@@ -2302,6 +2734,13 @@ urlbarView
 row
 -
 inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
 >
 .
 urlbarView
@@ -2702,30 +3141,6 @@ space
 :
 nowrap
 ;
-flex
--
-shrink
-:
-0
-;
-max
--
-width
-:
-calc
-(
-70
-%
--
-2
-*
-(
-16px
-+
-urlbarViewIconMarginEnd
-)
-)
-;
 }
 .
 urlbarView
@@ -2830,6 +3245,10 @@ tags
 .
 urlbarView
 -
+url
+.
+urlbarView
+-
 title
 :
 not
@@ -2841,7 +3260,7 @@ empty
 .
 urlbarView
 -
-secondary
+action
 {
 font
 -
@@ -2915,7 +3334,7 @@ empty
 .
 urlbarView
 -
-secondary
+action
 {
 color
 :
@@ -2942,23 +3361,6 @@ overflow
 :
 hidden
 ;
-}
-.
-urlbarView
--
-title
-:
-not
-(
-:
-empty
-)
-~
-.
-urlbarView
--
-url
-{
 color
 :
 var
@@ -2989,6 +3391,13 @@ urlbarView
 row
 -
 inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
 >
 .
 urlbarView
@@ -3017,22 +3426,18 @@ inner
 .
 urlbarView
 -
-secondary
-{
-color
-:
-inherit
-;
-}
+no
+-
+wrap
+>
+.
+urlbarView
+-
+action
 .
 urlbarView
 -
 row
-[
-type
-=
-remotetab
-]
 [
 selected
 ]
@@ -3047,30 +3452,13 @@ inner
 .
 urlbarView
 -
-action
-.
-urlbarView
--
-row
-[
-type
-=
-remotetab
-]
+url
+{
+color
 :
-hover
->
-.
-urlbarView
--
-row
--
-inner
->
-.
-urlbarView
--
-action
+inherit
+;
+}
 .
 urlbarView
 -
@@ -3149,58 +3537,9 @@ inner
 .
 urlbarView
 -
-title
-:
-not
-(
-:
-empty
-)
-~
-.
-urlbarView
+no
 -
-action
-.
-urlbarView
--
-row
-[
-type
-=
-search
-]
-:
-not
-(
-[
-selected
-]
-)
-:
-not
-(
-:
-hover
-)
-:
-not
-(
-[
-show
--
-action
--
-text
-]
-)
->
-.
-urlbarView
--
-row
--
-inner
+wrap
 >
 .
 urlbarView
@@ -3208,32 +3547,6 @@ urlbarView
 title
 -
 separator
-.
-urlbarView
-[
-actionoverride
-]
-.
-urlbarView
--
-row
-[
-type
-=
-switchtab
-]
->
-.
-urlbarView
--
-row
--
-inner
->
-.
-urlbarView
--
-action
 .
 urlbarView
 :
@@ -3268,6 +3581,158 @@ url
 visibility
 :
 collapse
+;
+}
+.
+urlbarView
+-
+row
+[
+type
+=
+remotetab
+]
+[
+selected
+]
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+>
+.
+urlbarView
+-
+action
+.
+urlbarView
+-
+row
+[
+type
+=
+remotetab
+]
+:
+hover
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+>
+.
+urlbarView
+-
+action
+.
+urlbarView
+-
+row
+[
+type
+=
+search
+]
+:
+not
+(
+[
+selected
+]
+)
+:
+not
+(
+:
+hover
+)
+:
+not
+(
+[
+show
+-
+action
+-
+text
+]
+)
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+>
+.
+urlbarView
+-
+action
+.
+urlbarView
+[
+actionoverride
+]
+.
+urlbarView
+-
+row
+[
+type
+=
+switchtab
+]
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+>
+.
+urlbarView
+-
+action
+{
+display
+:
+none
 ;
 }
 .
@@ -3348,6 +3813,13 @@ urlbarView
 row
 -
 inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
 >
 .
 urlbarView
